hphp/hack/test/typecheck/trait_reuse/trait_reuse_indirect2.php.exp
File "trait_reuse_indirect2.php", line 13, characters 7-14:
Traits with final methods cannot be reused, and `ReusedTrait` is already used by `MyBase`. (Typing[4186])
File "trait_reuse_indirect2.php", line 6, characters 22-32:
`TraitTwo` uses `ReusedTrait`
File "trait_reuse_indirect2.php", line 8, characters 7-12:
`MyBase` is defined here
File "trait_reuse_indirect2.php", line 9, characters 7-14:
`MyBase` uses `TraitTwo`
File "trait_reuse_indirect2.php", line 6, characters 22-32:
`TraitTwo` uses `ReusedTrait`
File "trait_reuse_indirect2.php", line 4, characters 25-27:
`ReusedTrait` has a final method `foo`
