hphp/hack/test/typecheck/trait_reuse/trait_reuse_indirect2.php
<?hh

trait ReusedTrait {
  public final function foo(): void {}
}
trait TraitTwo { use ReusedTrait; }

class MyBase {
  use TraitTwo;
}

class BadClass extends MyBase {
  use TraitTwo;
}
